[metadata]
name = HyMaintenance
version = 0.1.0
author = Hybird
description="HyMaintenance"
author_email = contact@hybird.org
long_description = file: README.md
url = https://github.com/HybirdCorp/HyMaintenance
license = GNU GENERAL PUBLIC LICENSE

[options]
zip_safe = False
include_package_data = True
packages = find:

[flake8]
max-line-length = 120
max-complexity = 100
ignore=W503
filename = *.py
exclude =
    .tox,
    __pycache__,
    .git,
    *.pyc,
    *.html,
    *.xml

[isort]
line_length=120
skip=hymaintenance/*.py, static/*
indent='    '
known_django=django
sections=FUTURE,STDLIB,THIRDPARTY,DJANGO,FIRSTPARTY,LOCALFOLDER
lines_after_imports=2
force_single_line=True
